# P1-Projekt

./: .gitignore  CMakeLists.txt  Database_interaction.c  Kode_archive.c  README.md
Database/: Database_interaction.c
SQLite/: CMakeLists.txt  Database_interaction.c  SQLite - Genvej.lnk  database.db
dabase/: CMakeLists.txt  Database_interaction.c
database_textfiles/: Nursing_Home_personnel.txt  medicine_conflicts.txt  medicine_database.txt  nursing_home_staff.txt  patient_journal.txt  patient_journal_medicine.txt  resident_record.txt  resident_record_medicine.txt
src/: CMakeLists.txt  Functions_main.c  Kode_1.c  Kode_1.h  Main.c  README.md
src/Calculator/: Calculator.c
src/Pillbox/: pillbox.c  pillbox.h
src/database/: CMakeLists.txt  database_interaction.c  database_interaction.h  database_interaction_library.c
src/database_interaction/: CMakeLists.txt  database_interaction.h  database_interaction_library.c
src/infusion/: CMakeLists.txt  infusion.c  infusion.h
src/main/: CMakeLists.txt  functions_main.c  main.c  main.h
src/pillbox/: CMakeLists.txt  pillbox.c  pillbox.h
src/test/: Test.c
src/test_database/: CMakeLists.txt  test_database.c  test_database.h
src/test_main/: CMakeLists.txt  tests.c  tests.h
test/: CMakeLists.txt
test_database/: CMakeLists.txt  test_database.c
test_main/: CMakeLists.txt
